{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player_Actions",
            "id": "e3d253ff-b448-4a31-bc61-d0c370ad2082",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "8b0d0a1f-3803-4664-9f94-852fe4272586",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ArrowRotation",
                    "type": "Button",
                    "id": "7dafed04-5f3d-4e12-8edc-f48ddd37af40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a998d907-60cd-4793-9728-71850be7c5e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "78252a15-9099-4a92-a5b7-31d4f9d48fbd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "3014601d-71b3-4dce-a951-ff46a2c5e9d5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0814193a-5dd9-4379-9c38-5863e0bff467",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8e145630-62a6-4b1d-848e-1d8f86c88496",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "301fde34-b230-4ac9-83e5-0c70c44ccdf5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "67efed1e-3f21-48c6-936a-9de7faf19063",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "binding",
                    "id": "fda084f6-1920-416d-a62f-ab0cc5a8544f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e2d28472-8198-42cd-b772-546ed0b15e9b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "57608c15-5950-46c9-8e4d-954d64802531",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "7b156230-76c8-49d7-9caa-709b8cddc7ac",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e4179d73-a792-4757-8714-5b7f0063a47a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI_Actions",
            "id": "16db13cc-611e-42ff-ab8a-72391fd89a95",
            "actions": [
                {
                    "name": "Pause_Game",
                    "type": "Button",
                    "id": "75a5020f-bcef-4bf5-b7c9-eb12adc8505a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c8a37f1-2a8f-4fd8-bd98-bf3664f31116",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause_Game",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}